Pet lab